# stroustrup-cpp-exercises

./: .gitignore  CMAKE_GUIDE.md  CMakeLists.txt  README.md  ZSH_COLORS_GUIDE.md  main.cpp  prog  std_lib_facilities.h
c_code/: install.sh  progg
codeTranslate/: psevdo_to_c.cpp
head3/: tasks1-11.cpp  tasks1-6.cpp
head4/: README.md  task01_temperature_average.cpp  task02_temperature_median.cpp  task03_city_distances.cpp  task04_guessing_game.cpp  task05_calculator.cpp  task08_chess_grains.cpp  task10_rock_paper_scissors.cpp  task11_12_primes_to_max.cpp  task13_sieve_eratosthenes.cpp  task14_sieve_with_input.cpp  task15_first_n_primes.cpp  task16_mode_numbers.cpp  task17_mode_strings.cpp  task18_quadratic_equation.cpp  task19_name_scores.cpp  task20_score_lookup.cpp  task21_name_lookup.cpp  tasks.cpp
head5/: conspect.txt  main.cpp  prog  task_10.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp
psevdocode/: factorial.cpp  fibo.cpp  sum_kv.cpp
