# ============================================
# CMakeLists.txt - Конфигурация сборки проекта
# ============================================

# Минимальная версия CMake (3.10 поддерживает C++17)
cmake_minimum_required(VERSION 3.10)

# Название проекта (отображается в IDE)
project(MyStudyProject)

# ============================================
# Настройки компилятора
# ============================================

# Стандарт C++ (11, 14, 17, 20)
# Для джуна достаточно C++17
set(CMAKE_CXX_STANDARD 17)

# Требовать указанный стандарт (не fallback на старый)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Включить расширения компилятора (gnu++17 вместо c++17)
# OFF = чистый стандарт, ON = расширения GCC/Clang
set(CMAKE_CXX_EXTENSIONS OFF)

# ============================================
# Флаги компиляции (для продакшена)
# ============================================

# Включить все предупреждения (важно для качества кода!)
if(MSVC)
    # Visual Studio
    add_compile_options(/W4)  # Уровень предупреждений 4
else()
    # GCC/Clang
    add_compile_options(-Wall -Wextra -pedantic)
endif()

# Режим отладки: добавить символы для отладчика
set(CMAKE_BUILD_TYPE Debug)

# ============================================
# Создание исполняемого файла
# ============================================

# Создать программу 'prog' из main.cpp
# Синтаксис: add_executable(имя_программы список_файлов)
add_executable(prog main.cpp)

# Если несколько файлов:
# add_executable(prog main.cpp utils.cpp helper.cpp)

# ============================================
# Дополнительные настройки (опционально)
# ============================================

# Подключить библиотеки (например, pthread для многопоточности)
# target_link_libraries(prog pthread)

# Добавить include директории
# target_include_directories(prog PRIVATE ${CMAKE_SOURCE_DIR}/include)

# Установка программы (для 'make install')
# install(TARGETS prog DESTINATION bin)
